--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <head>
 <title> AQ </title>
-<link rel="icon" type="image/x-icon">
+<link rel="icon" href="images/favicon.png" type="image/x-icon">
 </head>
 <body>
+<div style="width: 100%; height: 100%">
+<embed id="frCV" height="100%" width="100%" src="AQ_CV.pdf">
+</div>
 </body>
