--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<head>
-<title> AQ </title>
-<link rel="icon" href="images/favicon.png" type="image/x-icon">
-</head>
-<body>
-<div style="width: 100%; height: 100%">
-<embed id="frCV" height="100%" width="100%" src="AQ_CV.pdf">
-</div>
-</body>
+<meta http-equiv="refresh" content="0; url=http://alexeyqu.github.io/resume" />
