--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<meta http-equiv="refresh" content="0; url=http://alexeyqu.github.io/resume" />
+<head>
+	<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png?v=zXrl35k052">
+	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png?v=zXrl35k052">
+	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png?v=zXrl35k052">
+	<link rel="manifest" href="/images/site.webmanifest?v=zXrl35k052">
+	<link rel="mask-icon" href="/images/safari-pinned-tab.svg?v=zXrl35k052" color="#5bbad5">
+	<link rel="shortcut icon" href="/images/favicon.ico?v=zXrl35k052">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="msapplication-config" content="/images/browserconfig.xml?v=zXrl35k052">
+	<meta name="theme-color" content="#ffffff">
+	<meta http-equiv="refresh" content="0; url=http://alexeyqu.github.io/resume" />
+</head>
