--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
 	<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png?v=zXrl35k052">
 	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png?v=zXrl35k052">
@@ -8,5 +10,6 @@
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="msapplication-config" content="/images/browserconfig.xml?v=zXrl35k052">
 	<meta name="theme-color" content="#ffffff">
-	<meta http-equiv="refresh" content="0; url=http://alexeyqu.github.io/resume" />
+	<!-- <meta http-equiv="refresh" content="0; url=http://alexeyqu.github.io/resume" /> -->
 </head>
+</html>
