Redirect to pdf

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="msapplication-config" content="/images/browserconfig.xml?v=zXrl35k052">
 	<meta name="theme-color" content="#ffffff">
-	<meta http-equiv="refresh" content="0; url=http://alexeyqu.github.io/resume" />
+	<meta http-equiv="refresh" content="0; url=http://alexeyqu.github.io/AQ_CV.pdf" />
 </head>
 </html>
