--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png?v=zXrl35k052">
-	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png?v=zXrl35k052">
-	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png?v=zXrl35k052">
-	<link rel="manifest" href="/images/site.webmanifest?v=zXrl35k052">
-	<link rel="mask-icon" href="/images/safari-pinned-tab.svg?v=zXrl35k052" color="#5bbad5">
-	<link rel="shortcut icon" href="/images/favicon.ico?v=zXrl35k052">
-	<meta name="msapplication-TileColor" content="#da532c">
-	<meta name="msapplication-config" content="/images/browserconfig.xml?v=zXrl35k052">
-	<meta name="theme-color" content="#ffffff">
-	<meta http-equiv="refresh" content="0; url=http://alexeyqu.github.io/react-app" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <title>Alex Kulikov</title>
 </head>
+<body>
+	<div class="about">
+		<i class="fas fa-code fa-5x white"></i>
+		<h2>Alex Kulikov</h2>
+		<p>Software Engineer</p>
+		<h3>@alexeyqu</h3>
+		<a href="https://github.com/alexeyqu/"><i class="fab fa-github"></i></a>
+		<a href="https://instagram.com/alexeyqu/"><i class="fab fa-instagram"></i></a>
+		<a href="https://www.linkedin.com/in/alexeyqu/"><i class="fab fa-linkedin"></i></a>
+	</div>
+</body>
 </html>
