--- a/cv/index.html
+++ b/cv/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url='https://alexeyqu.github.io/AQ_CV.pdf'" />
+    <meta http-equiv="Refresh" content="0; url='https://alexeyqu.github.io/alexeyqu_cv.pdf'" />
   </head>
 </html>
