--- a/cv/index.html
+++ b/cv/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url='https://alexeyqu.github.io/alexeyqu_cv.pdf'" />
+    <title>Alex Kulikov CV</title>
   </head>
+  <body>
+    <object data="/alexeyqu_cv.pdf" type="application/pdf" width="100%" height="500px">
+        <p>Unable to display PDF file. <a href="/alexeyqu_cv.pdf">Download</a> instead.</p>
+      </object>
+  </body>
 </html>
