--- a/cv/index.html
+++ b/cv/index.html
@@ -4,7 +4,7 @@
     <title>Alex Kulikov CV</title>
   </head>
   <body>
-    <object data="/alexeyqu_cv.pdf" type="application/pdf" width="100%" height="100vh">
+    <object data="/alexeyqu_cv.pdf" type="application/pdf" style="min-height:100vh;width:100%">
         <p>Unable to display PDF file. <a href="/alexeyqu_cv.pdf">Download</a> instead.</p>
       </object>
   </body>
