--- a/cv/index.html
+++ b/cv/index.html
@@ -4,8 +4,6 @@
     <title>Alex Kulikov CV</title>
   </head>
   <body>
-    <object data="/alexeyqu_cv.pdf" type="application/pdf" style="min-height:100vh;width:100%">
-        <p>Unable to display PDF file. <a href="/alexeyqu_cv.pdf">Download</a> instead.</p>
-      </object>
+    <iframe src="https://docs.google.com/gview?url=https://lxqu.dev/alexeyqu_cv.pdf&embedded=true" style="min-height:100vh;width:100%;" frameborder="0"></iframe>
   </body>
 </html>
