pdf icon sorted

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h2>Alex Kulikov</h2>
 		<p>Software Engineer</p>
 		<h3>@alexeyqu</h3>
-		<a href="https://lxqu.dev/cv/"><i class="fa-light fa-file-pdf"></i></a>
+		<a href="https://lxqu.dev/cv/"><i class="far fa-file-pdf"></i></a>
 		<a href="https://github.com/alexeyqu/"><i class="fab fa-github"></i></a>
 		<a href="https://instagram.com/alexeyqu/"><i class="fab fa-instagram"></i></a>
 		<a href="https://www.linkedin.com/in/alexeyqu/"><i class="fab fa-linkedin"></i></a>
